# Ardan-NR-2023-07

./: .gitignore  Cargo.toml  README.md
Day1/: Introduction.md  OwnershipConcepts.md  SetupRust.md  SharingData.md  Traits.md
Day2/: AsyncAwait.md  AsyncChannels.md  Blocking.md  ConcurrencyParallelism.md  ExternalPrograms.md  Files.md  SystemThreads.md  Tokio.md
Day3/: Benchmark.md  ChildProcess.md  Databases.md  SharedState.md  Tracing.md  UnitTesting.md
Day4/: Audit.md  BuildProfiles.md  Cleverness.md  Clippy.md  Clone.md  CompileTimes.md  Deny.md  Dependencies.md  Documentation.md  DomainBoundaries.md  Floats.md  Formatting.md  Iterators.md  ManageDependencies.md  OOPs.md  Outdated.md  PlatformSpecific.md  Rc.md  SmallFunctions.md  TANSTAAFL.md  TypeSystem.md  YAGNI.md
code/: Cargo.toml
code/axum-file-adapt/: Cargo.toml
code/axum-file-adapt/src/: main.rs
code/axum-filestream/: Cargo.toml
code/axum-filestream/src/: main.rs
code/axum_sqlx/: .env  Cargo.toml  hello_db.db  hello_db.db-shm  hello_db.db-wal
code/axum_sqlx/migrations/: 20230719012757_initial.sql
code/axum_sqlx/src/: main.rs
code/axum_tracing/: Cargo.toml
code/axum_tracing/src/: main.rs
code/builder/src/: main.rs
code/builder_errors/: Cargo.toml
code/builder_errors/src/: main.rs
code/bytes/: Cargo.toml
code/bytes/src/: main.rs
code/call_echo/: Cargo.toml
code/call_echo/src/: main.rs
code/call_thumbnailer/: Cargo.toml
code/call_thumbnailer/src/: main.rs
code/call_thumbnailer_async/: Cargo.toml
code/call_thumbnailer_async/src/: main.rs
code/child_process/: Cargo.toml
code/child_process/src/: main.rs
code/child_process_wait_or_kill/: Cargo.toml
code/child_process_wait_or_kill/src/: main.rs
code/clippy_test/: Cargo.toml
code/clippy_test/src/: main.rs
code/count-lines/: Cargo.toml
code/count-lines-buffer/: Cargo.toml
code/count-lines-buffer/src/: main.rs
code/count-lines-mmap/: Cargo.toml
code/count-lines-mmap/src/: main.rs
code/count-lines/src/: main.rs
code/documented/: Cargo.toml
code/documented/src/: lib.rs
code/documented_client/: Cargo.toml
code/documented_client/src/: main.rs
code/echo/: Cargo.toml
code/iterate/: Cargo.toml
code/iterate/src/: main.rs
code/simple_unit_tests/: Cargo.toml
code/simple_unit_tests/migrations/: 20230719184255_create_messages_table.sql
code/simple_unit_tests/src/: lib.rs  stubbing.rs
code/simple_unit_tests/src/fixtures/: some_messages.sql
code/src/: main.rs
code/thumbnailer/: Cargo.toml
code/thumbnailer/src/: main.rs
code/tokio_tracing/: Cargo.toml
code/tokio_tracing/src/: main.rs
src/: main.rs
