[package]
name = "rustnr"
version = "0.1.0"
edition = "2021"

[dependencies]

[workspace]
members = [
    "code", # Parent directory for all the code examples
    "code/count-lines", # Count the lines in a file
    "code/count-lines-buffer", # Count the lines in a file, using buffered I/O
    "code/count-lines-mmap", # Count the lines in a file, using mmap
    "code/axum-filestream", # Streaming files from the Axum web service
    "code/axum-file-adapt", # Adapting a stream
    "code/thumbnailer", # Test program for use in the command examples
    "code/call_thumbnailer", # Example of calling a program
    "code/echo", # A simple program that reads stdin and echoes back to stdout
    "code/call_echo", # Calls echo and sends it input
    "code/call_thumbnailer_async", # Calls the thumbnail program asynchronously
    "code/axum_sqlx", # A simple Axum+SQLX web service
    "code/simple_unit_tests", # Basic unit testing
    "code/tokio_tracing", # Tokio Tracing
    "code/axum_tracing", # Tokio Tracing with an Axum Layer
    "code/clippy_test", # Demo for the linter
    "code/documented", # Demo of documented code
    "code/documented_client", # Demo of a client consuming documented code
    "code/iterate", # Iterator demo
    "code/bytes", # Self-scaling bytes/mb/gb/etc.
    "code/builder", # A builder pattern example
    "code/builder_errors", # A builder pattern with error handling
    "code/child_process", # Example for child process management
    "code/child_process_wait_or_kill", # Example for running a process and gettings its output or killing after a timeout
]

# For the build profiles section
#[profile.release]
#lto = true
#opt-level = "z"
#strip = "debuginfo"
#panic = "abort"
#codegen-units = 1
