[package]
name = "axum_tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.19" }
tokio = { version = "1.29.1", features = ["full"] }
tower-http = { version = "0.4.3", features = ["tracing", "full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
