[package]
name = "simple_unit_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
sqlx = { version = "0.7.1", features = ["sqlite", "runtime-tokio"] }
axum = "0.6.19"
serde_json = "1.0.103"
mockall = "0.11.4"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
mime = "0.3"
fake = "2.6"
